增加fst native实例