@@ -46,6 +46,9 @@
                 <artifactId>native-maven-plugin</artifactId>
                 <configuration>
                     <skip>false</skip>
+                    <buildArgs>
+                        -H:+AddAllCharsets --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED  --add-opens=java.base/java.util=ALL-UNNAMED  --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED
+                    </buildArgs>
                 </configuration>
             </plugin>
         </plugins>
